--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </div>
   </nav>
   <hr>
+<!--   
   <main>
     <h2>Chocolate Pizza</h2>
     <h3>POSTED ON 15 DEC 2013 / DESSERTS</h3>
@@ -77,7 +78,7 @@
     <p>Delicious All Rights Reserved.<br/>
     Proudly published with Ghost.</p>
 
-  </footer>
+  </footer> -->
 
 
 </body>
