--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <nav>
-    
+
     <div class="logo">
       <img src="img/logo.png" alt="">
       <h1>Delicious</h1>
@@ -33,19 +33,29 @@
       <img src="img/mail-icon.png" alt="">
     </div>
   </nav>
+
   <hr>
-<!--   
+
   <main>
     <h2>Chocolate Pizza</h2>
     <h3>POSTED ON 15 DEC 2013 / DESSERTS</h3>
-    <img src="img/print-icon.png" alt="">
-    <p>PRINT</p>
+    <div class="print">
+      <img src="img/print-icon.png" alt="">
+      <p>PRINT</p>
+    </div>
 
     <img src="img/choco-pizza.png" alt="">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis qui repellat explicabo minima corrupti unde cupiditate nulla obcaecati eos ratione voluptate dignissimos architecto numquam optio quaerat culpa doloremque, impedit beatae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores sunt dignissimos neque. Illo rem maxime quibusdam cum dolorem modi magnam, quo nesciunt similique labore distinctio laborum, necessitatibus cupiditate ea odio?</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus rem aut soluta consequatur ratione non, quas, odio ipsa esse voluptates accusamus nam exercitationem vero asperiores ullam alias distinctio voluptatum sed!</p>
-
+    <div class="p">
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis qui repellat explicabo minima corrupti unde
+      cupiditate nulla obcaecati eos ratione voluptate dignissimos architecto numquam optio quaerat culpa doloremque,
+      impedit beatae.</p> <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores sunt dignissimos neque. Illo rem maxime
+      quibusdam cum dolorem modi magnam, quo nesciunt similique labore distinctio laborum, necessitatibus cupiditate ea
+      odio?</p><br>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus rem aut soluta consequatur ratione non, quas,
+      odio ipsa esse voluptates accusamus nam exercitationem vero asperiores ullam alias distinctio voluptatum sed!</p>
+      <br>
+    </div>
     <div class="list">
       <ul>
         <li></li>
@@ -75,10 +85,10 @@
     <hr>
     <img src="img/small-logo.png" alt="">
     <hr>
-    <p>Delicious All Rights Reserved.<br/>
-    Proudly published with Ghost.</p>
+    <p>Delicious All Rights Reserved.<br />
+      Proudly published with Ghost.</p>
 
-  </footer> -->
+  </footer>
 
 
 </body>
