--- a/index.html
+++ b/index.html
@@ -58,18 +58,16 @@
     </div>
     <div class="list">
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>ingredient</li>
+        <li>ingredient</li>
+        <li>ingredient</li>
+        <li>ingredient</li>
+        <li>ingredient</li>
+        <li>ingredient</li>
+        <li>ingredient</li>
+        <li>ingredient</li>
+        <li>ingredient</li>
+        <li>ingredient</li>
       </ul>
     </div>
   </main>
