--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 <body>
 
   <nav>
-
+ 
     <div class="logo">
       <img src="img/logo.png" alt="">
+      <div>
       <h1>Delicious</h1>
       <p>THE BEST FOOD BLOG ON THE WEB</p>
+    </div>
     </div>
 
     <div class="social">
@@ -37,12 +39,16 @@
   <hr>
 
   <main>
+    <div class="title">
+      <div class="blocktitle">
     <h2>Chocolate Pizza</h2>
     <h3>POSTED ON 15 DEC 2013 / DESSERTS</h3>
+  </div>
     <div class="print">
       <img src="img/print-icon.png" alt="">
       <p>PRINT</p>
     </div>
+  </div>
 
     <img src="img/choco-pizza.png" alt="">
     <div class="p">
@@ -74,8 +80,10 @@
   <hr>
   <section>
     <img src="img/van-pic.png" alt="">
+    <div class="author">
     <h4>Vanessa Stevenson</h4>
     <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
+  </div>
     <button>Share Recipe</button>
   </section>
 
